adding firebase user authentication

--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^1.35.0",
     "axios": "^0.17.1",
+    "firebase": "^4.8.1",
     "material-ui": "^0.20.0",
     "mongoose": "^5.0.0-rc2",
+    "re-base": "^3.2.1",
     "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
