--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "@blueprintjs/core": "^1.35.0",
     "axios": "^0.17.1",
+    "chart.js": "^2.7.1",
     "firebase": "^4.8.1",
     "material-ui": "^0.20.0",
     "mongoose": "^5.0.0-rc2",
     "re-base": "^3.2.2",
     "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.5",
     "react-native-md-textinput": "^2.0.4",
