--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.0.0-rc2",
     "multer": "^1.3.0",
     "nodemon": "^1.14.8",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-circular-progressbar": "^0.6.0"
   }
 }
