--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-chartjs-2": "^2.7.0",
+    "react-circular-progressbar": "^0.6.0",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.5",
     "react-native-md-textinput": "^2.0.4",
