--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-native-md-textinput": "^2.0.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "superagent": "^3.8.2"
+    "superagent": "^3.8.2",
+    "react-circular-progressbar": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
