--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "mongoose": "^5.0.1",
     "multer": "^1.3.0",
     "nodemon": "^1.14.11",
-    "path": "^0.12.7",
-    "react-circular-progressbar": "^0.6.0"
+    "path": "^0.12.7"
   }
 }
